Fix image path case sensitivity in index4.html

--- a/index4.html
+++ b/index4.html
@@ -801,7 +801,7 @@
         </div>
       </div>
       <div class="book-image-container" style="flex: 1; width: 45%; max-width: 45%; position: relative; display: flex; align-items: flex-start;">
-        <img src="images4/becong.jpg" alt="Business Book" class="product-image" id="bookImage" onclick="openBookPreview()" style="position: relative;">
+        <img src="images4/Becong.jpg" alt="Business Book" class="product-image" id="bookImage" onclick="openBookPreview()" style="position: relative;">
         <div id="previewHelpText" style="position: absolute; top: 50%; right: -130px; transform: translateY(-50%); background-color: rgba(77, 184, 216, 1); color: white; width: 180px; height: 60px; font-family: 'BeVietnamPro', sans-serif; font-size: 1rem; font-weight: 600; box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2); cursor: pointer; z-index: 5; transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s; display: flex; align-items: center; justify-content: center; text-align: center; line-height: 1.2; clip-path: polygon(0 0, 85% 0, 100% 50%, 85% 100%, 0 100%); border-radius: 8px 0 0 8px;" onclick="openBookPreview()">
           Đọc thử chương đầu
         </div>
